monthly update add command handler add data type:TreeData add support for cli fix dataconsumer endpoint problem